data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2047.wast
;; 8. **Test Description**:     Implement an `if` block with an empty `then` branch and an `else` branch containing a `br_table` instruction with both valid and out-of-bounds indices.    **Constraint**: Tests mixing valid and invalid `br_table` entries within the same instruction in the `else` branch.    **Edge Case Relation**: Checks for differential treatment of mixed validity indices in `br_table` within conditional branches.

(assert_invalid
  (module 
    (func (param i32) (result i32) 
      (if (result i32) 
        (local.get 0)
        (then)
        (else
          (br_table 0 1 2 (local.get 0))
        )
      )
    )
  )
  "invalid br_table index"
)